force-app/main/default/objects/Account/fields/Accept_DP_PD_Transfer_RFMC__c.field-meta.xml
<CustomField>
    <fullName>Accept_DP_PD_Transfer_RFMC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field to determine if HCO Delegated User, HCP, or customer user has accepted Term &amp; Condition before registration</description>
    <label>Accept DP/ PD Transfer</label>
    <type>Checkbox</type>
</CustomField>