force-app/main/default/objects/Account/fields/Accept_MKT_DP_Transfer_RFM__c.field-meta.xml
<CustomField>
    <fullName>Accept_MKT_DP_Transfer_RFM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Mkt DP Transfer</label>
    <type>Checkbox</type>
</CustomField>