force-app/main/default/objects/Account/fields/AccessToOrders__c.field-meta.xml
<CustomField>
    <fullName>AccessToOrders__c</fullName>
    <description>Flag to enable/disable a particular HCO delegated user account if they can view orders</description>
    <inlineHelpText>Flag to enable/disable a particular HCO delegated user account if they can view orders</inlineHelpText>
    <label>Access to Orders</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ordering_Flows</valueSetName>
    </valueSet>
</CustomField>