force-app/main/default/objects/Account/fields/Account_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Custom_Field__c</fullName>
    <description>This is test field. delta-deploy?</description>
    <label>Account Custom Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>