force-app/main/default/objects/Account/fields/Account_Record_Type_DevName_RFM__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_DevName_RFM__c</fullName>
    <description>Formula created just for decreasing object references amount on Order object</description>
    <formula>RecordType.DeveloperName</formula>
    <label>Account Record Type Developer Name</label>
    <type>Text</type>
</CustomField>