force-app/main/default/objects/Account/fields/Account_Record_Type_RFM__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_RFM__c</fullName>
    <description>Formula created just for decreasing object references amount on Order object</description>
    <formula>RecordType.Name</formula>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>