force-app/main/default/objects/Account/fields/AccountAdoptionLadder_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountAdoptionLadder_RMI__c</fullName>
    <label>Adoption Ladder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unaware</fullName>
            </value>
            <value>
                <fullName>Aware</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Early User</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>