force-app/main/default/objects/Account/fields/AccountBreastCancerPatients_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountBreastCancerPatients_RMI__c</fullName>
    <label>Breast Cancer Patients</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>