force-app/main/default/objects/Account/fields/AccountCUPPatient_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountCUPPatient_RMI__c</fullName>
    <label>CUP Patient</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>