force-app/main/default/objects/Account/fields/AccountID_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountID_RMI__c</fullName>
    <description>Account ID from CRM4U</description>
    <externalId>true</externalId>
    <label>Account ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>