force-app/main/default/objects/Account/fields/AccountLastOrderDate_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountLastOrderDate_RMI__c</fullName>
    <label>Last Order Date</label>
    <type>DateTime</type>
</CustomField>