force-app/main/default/objects/Account/fields/AccountLungCancerPatients_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountLungCancerPatients_RMI__c</fullName>
    <label>Lung Cancer Patients</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>