force-app/main/default/objects/Account/fields/AccountMailingCity_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountMailingCity_RMI__c</fullName>
    <label>Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>