force-app/main/default/objects/Account/fields/AccountMailingCountry_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountMailingCountry_RMI__c</fullName>
    <label>Mailing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>