force-app/main/default/objects/Account/fields/AccountMailingPostalCode_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountMailingPostalCode_RMI__c</fullName>
    <label>Mailing Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>