force-app/main/default/objects/Account/fields/AccountMailingState_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountMailingState_RMI__c</fullName>
    <label>Mailing State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>