force-app/main/default/objects/Account/fields/AccountMailingStreet_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountMailingStreet_RMI__c</fullName>
    <label>Mailing Street</label>
    <type>TextArea</type>
</CustomField>