force-app/main/default/objects/Account/fields/AccountOtherPatients_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountOtherPatients_RMI__c</fullName>
    <label>Other Patients</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>