force-app/main/default/objects/Account/fields/AccountRMIKA_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountRMIKA_RMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFM KA</label>
    <type>Checkbox</type>
</CustomField>