force-app/main/default/objects/Account/fields/AccountRMITAE_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountRMITAE_RMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFM TAE</label>
    <type>Checkbox</type>
</CustomField>