force-app/main/default/objects/Account/fields/AccountRMITAEInfluence_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountRMITAEInfluence_RMI__c</fullName>
    <label>RFM TAE Influence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>