force-app/main/default/objects/Account/fields/AccountSAPCustomer_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountSAPCustomer_RMI__c</fullName>
    <label>SAP ID 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>