force-app/main/default/objects/Account/fields/AccountSubtype_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountSubtype_RMI__c</fullName>
    <description>Account Subtype from CRM4U</description>
    <label>Account Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Business Account</fullName>
            </value>
            <value>
                <fullName>Buying Group Organization</fullName>
            </value>
            <value>
                <fullName>Cancer Network Organization</fullName>
            </value>
            <value>
                <fullName>Hospital Department</fullName>
            </value>
            <value>
                <fullName>Other Network Organization</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Practice</fullName>
            </value>
            <value>
                <fullName>Virtual Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>