force-app/main/default/objects/Account/fields/AccountTax__c.field-meta.xml
<CustomField>
    <fullName>AccountTax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Tax</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ManualCountry_RFM__c</field>
            <operation>equals</operation>
            <valueField>CountryTax_RFM__c.Country_RFM__c</valueField>
        </filterItems>
        <filterItems>
            <field>CountryTax_RFM__c.AccountSpecific__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CountryTax_RFM__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>