force-app/main/default/objects/Account/fields/AccountTotalNumberOfOrders_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountTotalNumberOfOrders_RMI__c</fullName>
    <label>Total Number of Orders</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>