force-app/main/default/objects/Account/fields/AccountType_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountType_RMI__c</fullName>
    <description>Account Type from CRM4U</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>