force-app/main/default/objects/Account/fields/AccountVisitCity_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountVisitCity_RMI__c</fullName>
    <label>Visit City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>