force-app/main/default/objects/Account/fields/AccountVisitCountry_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountVisitCountry_RMI__c</fullName>
    <label>Visit Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>