force-app/main/default/objects/Account/fields/AccountVisitPostalCode_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountVisitPostalCode_RMI__c</fullName>
    <label>Visit Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>