force-app/main/default/objects/Account/fields/AccountVisitState_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountVisitState_RMI__c</fullName>
    <label>Visit State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>