force-app/main/default/objects/Account/fields/AccountVisitStreet_RMI__c.field-meta.xml
<CustomField>
    <fullName>AccountVisitStreet_RMI__c</fullName>
    <label>Visit Street</label>
    <type>TextArea</type>
</CustomField>