force-app/main/default/objects/Account/fields/ActiveDiscountCodesCounter__c.field-meta.xml
<CustomField>
    <fullName>ActiveDiscountCodesCounter__c</fullName>
    <description>Counts the number of active related discount codes.</description>
    <label>Number of Active Discount Codes</label>
    <summaryFilterItems>
        <field>DiscountCode_RFM__c.Status_RFM__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>DiscountCode_RFM__c.Account_RFM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>