force-app/main/default/objects/Account/fields/Additional_Account_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account_Identifier__c</fullName>
    <label>Additional Account Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>