force-app/main/default/objects/Account/fields/AllNonOrdersCommunicationsOptOut_RFM__c.field-meta.xml
<CustomField>
    <fullName>AllNonOrdersCommunicationsOptOut_RFM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Non Orders Communications Opt Out</label>
    <type>Checkbox</type>
</CustomField>