force-app/main/default/objects/Account/fields/AllowInvoice_RFM__c.field-meta.xml
<CustomField>
    <fullName>AllowInvoice_RFM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Invoice</label>
    <type>Checkbox</type>
</CustomField>