force-app/main/default/objects/Account/fields/Archetype__c.field-meta.xml
<CustomField>
    <fullName>Archetype__c</fullName>
    <label>Archetype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Archetype</valueSetName>
    </valueSet>
</CustomField>