force-app/main/default/objects/Account/fields/AreaOfInterest_RFM__c.field-meta.xml
<CustomField>
    <fullName>AreaOfInterest_RFM__c</fullName>
    <label>Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Oncology</fullName>
            </value>
            <value>
                <fullName>Lung Oncology</fullName>
            </value>
            <value>
                <fullName>Breast Oncology</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>Rare</fullName>
            </value>
            <value>
                <fullName>Pediatric</fullName>
            </value>
            <value>
                <fullName>Gynae</fullName>
            </value>
            <value>
                <fullName>GU</fullName>
            </value>
            <value>
                <fullName>Hematology</fullName>
            </value>
            <value>
                <fullName>Sarcoma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>