force-app/main/default/objects/Account/fields/AwaitingDiscountCodesCounter__c.field-meta.xml
<CustomField>
    <fullName>AwaitingDiscountCodesCounter__c</fullName>
    <description>Counts the number of awaiting related discount codes.</description>
    <label>No. of Pending Approval Discount Codes</label>
    <summaryFilterItems>
        <field>DiscountCode_RFM__c.Status_RFM__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </summaryFilterItems>
    <summaryForeignKey>DiscountCode_RFM__c.Account_RFM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>