force-app/main/default/objects/Account/fields/Bill_to_Customer_RMI__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Customer_RMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill to Customer</label>
    <type>Checkbox</type>
</CustomField>