force-app/main/default/objects/Account/fields/BlockReturnCaseDelay__c.field-meta.xml
<CustomField>
    <fullName>BlockReturnCaseDelay__c</fullName>
    <description>Days when case will be created if specimen won&apos;t be sent back</description>
    <label>Block Return Case Delay</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>