force-app/main/default/objects/Account/fields/Brick_Description_RFMC__c.field-meta.xml
<CustomField>
    <fullName>Brick_Description_RFMC__c</fullName>
    <label>Brick Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>