force-app/main/default/objects/Account/fields/Brick_RMI__c.field-meta.xml
<CustomField>
    <fullName>Brick_RMI__c</fullName>
    <description>Brick from CRM4U</description>
    <label>Brick</label>
    <length>120</length>
    <type>Text</type>
</CustomField>