force-app/main/default/objects/Account/fields/CancelledDiscountCodesCounter__c.field-meta.xml
<CustomField>
    <fullName>CancelledDiscountCodesCounter__c</fullName>
    <description>Counts the number of cancelled related discount codes.</description>
    <label>Number of Cancelled Discount Codes</label>
    <summaryFilterItems>
        <field>DiscountCode_RFM__c.Status_RFM__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>DiscountCode_RFM__c.Account_RFM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>