force-app/main/default/objects/Account/fields/City_RFMC__c.field-meta.xml
<CustomField>
    <fullName>City_RFMC__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>