force-app/main/default/objects/Account/fields/Completed_Welcome_Journey_RMI__c.field-meta.xml
<CustomField>
    <fullName>Completed_Welcome_Journey_RMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Welcome Journey</label>
    <type>Checkbox</type>
</CustomField>