force-app/main/default/objects/Account/fields/Consortium__c.field-meta.xml
<CustomField>
    <fullName>Consortium__c</fullName>
    <description>Consortium associated with HCO</description>
    <label>Consortium</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ManualCountry_RFM__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Consortium</valueSetName>
    </valueSet>
</CustomField>