force-app/main/default/objects/Account/fields/Country_ISO_code_RFM__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_code_RFM__c</fullName>
    <label>CRM Country ISO code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>