force-app/main/default/objects/Account/fields/Country_Reference_RFMC__c.field-meta.xml
<CustomField>
    <fullName>Country_Reference_RFMC__c</fullName>
    <formula>IF(NOT ISBLANK (TEXT(ManualCountry_RFM__c)),TEXT(ManualCountry_RFM__c),TEXT(Country_RMI__c))</formula>
    <label>Country Reference</label>
    <type>Text</type>
</CustomField>