force-app/main/default/objects/Account/fields/CRM4U_Acting_Level__c.field-meta.xml
<CustomField>
    <fullName>CRM4U_Acting_Level__c</fullName>
    <label>Acting Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CRM4U_Acting_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Municipal</fullName>
            </value>
            <value>
                <fullName>MISTA Economy Companies</fullName>
            </value>
            <value>
                <fullName>IMSS</fullName>
            </value>
            <value>
                <fullName>ISSSTE</fullName>
            </value>
            <value>
                <fullName>SSA</fullName>
            </value>
            <value>
                <fullName>PEMEX</fullName>
            </value>
            <value>
                <fullName>SEDENA</fullName>
            </value>
            <value>
                <fullName>ISSEMYM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>