force-app/main/default/objects/Account/fields/CRM4U_Acting_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM4U_Acting_Type__c</fullName>
    <label>Acting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Public(MX)</fullName>
            </value>
            <value>
                <fullName>Public(BR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>