force-app/main/default/objects/Account/fields/CRM4U_HCP_Delegated__c.field-meta.xml
<CustomField>
    <fullName>CRM4U_HCP_Delegated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRM4U HCP Delegated</label>
    <type>Checkbox</type>
</CustomField>