force-app/main/default/objects/Account/fields/CRM4U_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM4U_RecordType_Name__c</fullName>
    <label>CRM4U RecordType Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>