force-app/main/default/objects/Account/fields/CRM4U_Status__c.field-meta.xml
<CustomField>
    <fullName>CRM4U_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRM4U Status</label>
    <type>Checkbox</type>
</CustomField>