force-app/main/default/objects/Account/fields/CRM4U_UCI__c.field-meta.xml
<CustomField>
    <fullName>CRM4U_UCI__c</fullName>
    <label>UCI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>