force-app/main/default/objects/Account/fields/CRMID_RMI__c.field-meta.xml
<CustomField>
    <fullName>CRMID_RMI__c</fullName>
    <description>CRM ID from CRM4U</description>
    <externalId>true</externalId>
    <label>CRM ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>