force-app/main/default/objects/Account/fields/Delegation_RFMC__c.field-meta.xml
<CustomField>
    <fullName>Delegation_RFMC__c</fullName>
    <label>Delegation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>