force-app/main/default/objects/Account/fields/DisableDiscountCodes_RFM__c.field-meta.xml
<CustomField>
    <fullName>DisableDiscountCodes_RFM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable discount codes</label>
    <type>Checkbox</type>
</CustomField>