force-app/main/default/objects/Account/fields/DisableOnlinePayment_RFM__c.field-meta.xml
<CustomField>
    <fullName>DisableOnlinePayment_RFM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable online payment</label>
    <type>Checkbox</type>
</CustomField>