force-app/main/default/objects/Account/fields/DiscountCodesCounter__c.field-meta.xml
<CustomField>
    <fullName>DiscountCodesCounter__c</fullName>
    <description>Counts all related discount codes.</description>
    <label>Number of All Discount Codes</label>
    <summaryForeignKey>DiscountCode_RFM__c.Account_RFM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>