force-app/main/default/objects/Account/fields/District_Commune_RFMC__c.field-meta.xml
<CustomField>
    <fullName>District_Commune_RFMC__c</fullName>
    <label>District/Commune</label>
    <length>255</length>
    <type>Text</type>
</CustomField>