force-app/main/default/objects/Account/fields/Email_distributor_RMI__c.field-meta.xml
<CustomField>
    <fullName>Email_distributor_RMI__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>