force-app/main/default/objects/Account/fields/ExcludeFromOrderingProcess__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFromOrderingProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from ordering process</label>
    <type>Checkbox</type>
</CustomField>