force-app/main/default/objects/Account/fields/F1CDxTargetLab__c.field-meta.xml
<CustomField>
    <fullName>F1CDxTargetLab__c</fullName>
    <label>F1 CDx Target Lab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Penzberg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>