force-app/main/default/objects/Account/fields/First_Name_Translated_RMI__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Translated_RMI__c</fullName>
    <label>First Name (Translated)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>