force-app/main/default/objects/Account/fields/FMIID_RFM__c.field-meta.xml
<CustomField>
    <fullName>FMIID_RFM__c</fullName>
    <label>FMI ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>