force-app/main/default/objects/Account/fields/FMIIntegrationStatus_RFM__c.field-meta.xml
<CustomField>
    <fullName>FMIIntegrationStatus_RFM__c</fullName>
    <label>FMI Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Send</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>