force-app/main/default/objects/Account/fields/FMITarget_RFM__c.field-meta.xml
<CustomField>
    <fullName>FMITarget_RFM__c</fullName>
    <label>FMI Target</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Penzberg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>