force-app/main/default/objects/Account/fields/FMIUpdates_RFM__c.field-meta.xml
<CustomField>
    <fullName>FMIUpdates_RFM__c</fullName>
    <label>FMI Updates</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Communications</valueSetName>
    </valueSet>
</CustomField>