force-app/main/default/objects/Account/fields/GDPR_Status_RFM__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Status_RFM__c</fullName>
    <label>GDPR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be removed</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Forgotten</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>