force-app/main/default/objects/Account/fields/Gigya_ID__c.field-meta.xml
<CustomField>
    <fullName>Gigya_ID__c</fullName>
    <label>Gigya ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>