force-app/main/default/objects/Account/fields/Has_Downloaded_Premium_Content_RMI__c.field-meta.xml
<CustomField>
    <fullName>Has_Downloaded_Premium_Content_RMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Downloaded Premium Content</label>
    <type>Checkbox</type>
</CustomField>