force-app/main/default/objects/Account/fields/HCODelegatedUser__c.field-meta.xml
<CustomField>
    <fullName>HCODelegatedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCO Delegated User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>