force-app/main/default/objects/Account/fields/HcoDuOverrideSapIds__c.field-meta.xml
<CustomField>
    <fullName>HcoDuOverrideSapIds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HCO DU overrides SAP IDs</label>
    <type>Checkbox</type>
</CustomField>