force-app/main/default/objects/Account/fields/HCPLaboratoryStakeholder_RFM__c.field-meta.xml
<CustomField>
    <fullName>HCPLaboratoryStakeholder_RFM__c</fullName>
    <label>HCP Laboratory Stakeholder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>The Scientist &quot;KOL&quot;</fullName>
            </value>
            <value>
                <fullName>The Businessman</fullName>
            </value>
            <value>
                <fullName>The Clinicians</fullName>
            </value>
            <value>
                <fullName>The Dispensers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>